added some styling and dummy charts

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,8 @@ body {
 .MuiPaper-root {
   background-color: var(--color-primary) !important;
   color: var(--color-secondary) !important;
+  box-shadow: none !important;
+  padding: 0 !important;
 }
 
 .MuiTypography-root {
