--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ body {
   background-color: var(--color-primary) !important;
   color: var(--color-secondary) !important;
   box-shadow: none !important;
-  padding: 0 !important;
+  padding: 15px 5px !important;
 }
 
 .MuiTypography-root {
