--- a/src/style.css
+++ b/src/style.css
@@ -89,5 +89,6 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 input[type="number"] {
+  appearance: textfield;
   -moz-appearance: textfield;
 }
