--- a/src/style.css
+++ b/src/style.css
@@ -169,3 +169,9 @@ input[type="number"] {
 .rdrStaticRangeLabel {
   color: var(--color-secondary);
 }
+
+@media (max-width: 600px) {
+  .rdrDefinedRangesWrapper {
+    display: none !important;
+  }
+}
