--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .MuiOutlinedInput-root {
-  background-color: var(--color-input-bg);
+  background-color: var(--color-input-bg);  
 }
 
 .MuiOutlinedInput-notchedOutline {
@@ -100,6 +100,7 @@ body {
 .MuiDialog-paper {
   background-color: var(--color-primary) !important;
   color: var(--color-secondary) !important;
+  padding: 15px !important;
 }
 
 .MuiAlert-root {
@@ -203,5 +204,8 @@ input[type="number"] {
 @media (max-width: 600px) {
   .rdrDefinedRangesWrapper {
     display: none !important;
+  }
+  .MuiDialog-paper{
+    padding: 5px !important;
   }
 }
